--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: ^5.8.0+1
   flutter_riverpod: ^2.6.1
   cloud_firestore: ^6.0.0
+  firebase_core: ^4.0.0
 
 dev_dependencies:
   flutter_test:
